--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "node-inspect": "^2.0.0",
     "socket.io": "^2.0.1"
   },
   "devDependencies": {},
