--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "http": "0.0.1-security",
     "node-inspect": "^2.0.0",
     "socket.io": "2.0.1",
-    "rpi-ws281x": "^1.0.35"
+    "rpi-ws281x": "^1.0.35",
+    "unicornhat-hd": "^0.0.4"
   },
   "devDependencies": {},
   "scripts": {
